--- a/templates/blog/portfolio/page_cv.html.twig
+++ b/templates/blog/portfolio/page_cv.html.twig
@@ -78,8 +78,9 @@
 {% block body %}
     <header class="page-header text-white text-center">
         <div class="container">
-            <h1 class="display-4 mb-4">Ingénieur Cybersécurité</h1>
-            <p class="lead mb-5">Spécialiste en Réseaux, Cloud Computing & Automatisation</p>
+            <h1 class="display-4 mb-4">L'intitulé du poste réseaux et
+                télécommunications (ou autre) de vos rêves</h1>
+            <p class="lead mb-5">Ingénieur en Cybersécurité</p>
             
             <nav class="mt-4">
                 <ul class="nav nav-pills justify-content-center">
