--- a/templates/blog/portfolio/page_updated_skills.html.twig
+++ b/templates/blog/portfolio/page_updated_skills.html.twig
@@ -369,7 +369,7 @@
                         <div class="row">
                             <div class="col-md-4">
                                 <div class="glass-card">
-                                    <img src="https://www.cisco.com/c/dam/assets/swa/img/logos/cisco-logo-blue.png" class="card-img-top" alt="Certification Cisco">
+                                    <img src="{{ asset('/images/skills/cisco_ccna.jpg') }}" class="card-img-top" alt="Certification Cisco">
                                     <div class="card-body">
                                         <h5 class="card-title">Certification Réseau Avancé</h5>
                                         <p class="card-text">Certification Cisco CCNA en réseaux et infrastructure.</p>
@@ -517,8 +517,8 @@
                             <p class="card-text">Langage de programmation polyvalent utilisé pour le développement web, l'analyse de données, et l'automatisation.</p>
                             <h6 class="text-white">Compétences maîtrisées :</h6>
                             <ul class="text-white">
-                                <li>Développement d'applications web avec Django</li>
-                                <li>Analyse de données avec Pandas et NumPy</li>
+                                <li>Développement d'applications avec interfaces TTinker et PyQt5</li>
+                                <li>Analyse de données NumPy</li>
                                 <li>Automatisation de tâches système</li>
                             </ul>
                             <a href="#" class="btn btn-primary">Plus d'informations</a>
